<?xml version="1.0" encoding="UTF-8"?>
<!--
  (c) Copyright 2013 l33t labs LLC and others.

  This program and the accompanying materials
  are made available under the terms of the Eclipse Public License 2.0
  which accompanies this distribution, and is available at
  https://www.eclipse.org/legal/epl-2.0/

  SPDX-License-Identifier: EPL-2.0

  Contributors:
     Tony McCrary - initial implementation
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>org.eclipse.images</groupId>
	<artifactId>org.eclipse.images.renderer</artifactId>
	<version>1.0.100-SNAPSHOT</version>
	<name>Eclipse Images SVG Renderer Plugin</name>
	<parent>
		<artifactId>org.eclipse.images.parent</artifactId>
		<groupId>eclipse.images</groupId>
		<version>4.35.0-SNAPSHOT</version>
		<relativePath>../</relativePath>
	</parent>
	<packaging>maven-plugin</packaging>
	<properties>
		<maven-plugin-version>3.15.1</maven-plugin-version>
		<maven-version>3.9.9</maven-version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-plugin-api</artifactId>
			<version>${maven-version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
		    <groupId>org.apache.maven.plugin-tools</groupId>
		    <artifactId>maven-plugin-annotations</artifactId>
		    <version>${maven-plugin-version}</version>
		    <scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-core</artifactId>
			<version>${maven-version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.18.0</version>
		</dependency>
		<dependency>
			<groupId>org.twdata.maven</groupId>
			<artifactId>mojo-executor</artifactId>
			<version>2.4.1</version>
		</dependency>
		<!--
			Image Filtering Library
			License: Apache License, Version 2.0
			http://www.jhlabs.com/ip/filters/
		-->
		<dependency>
			<groupId>com.jhlabs</groupId>
			<artifactId>filters</artifactId>
			<version>2.0.235-1</version>
		</dependency>
		<!--
			Advanced Image Scaling Library
			License: New BSD License
			https://code.google.com/p/java-image-scaling/
		-->
		<dependency>
			<groupId>com.mortennobel</groupId>
			<artifactId>java-image-scaling</artifactId>
			<version>0.8.6</version>
		</dependency>
		<!--
			Batik SVG Rendering Library
			License: Apache License, Version 2.0
			http://xmlgraphics.apache.org/batik/
		-->
		<dependency>
			<groupId>org.apache.xmlgraphics</groupId>
			<artifactId>batik-rasterizer</artifactId>
			<version>1.18</version>
		</dependency>
		<dependency>
			<groupId>org.apache.xmlgraphics</groupId>
			<artifactId>batik-codec</artifactId>
			<version>1.18</version>
		</dependency>
		<dependency>
			<groupId>org.apache.xmlgraphics</groupId>
			<artifactId>batik-anim</artifactId>
			<version>1.18</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<release>17</release>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-plugin-plugin</artifactId>
				<version>${maven-plugin-version}</version>
				<configuration>
					<goalPrefix>eclipse-images-renderer</goalPrefix>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
